--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="IE=edge"
+  >
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
   <title>Bootcamp Frontend</title>
 </head>
 <body>
-  
+
+  <div>
+    <div>
+      <img
+        src="https://media-exp1.licdn.com/dms/image/C4D1BAQG-0hio-DK1ug/company-background_10000/0/1519796866306?e=2147483647&v=beta&t=A0JgPhrxa-ruGv9bVMbj3_El1Opt1jj7hyUskbHS5zc"
+        alt="image 1"
+      >
+      <span>Lorem ipsum dolor</span>
+    </div>
+    <div>
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfvhsPnBF6mY9c6heKqs7ulawFE3rIwUlcI-VZ8aUC883wBUGF0KT8Wytg0aq56cWgK9M&usqp=CAU"
+        alt="image 2"
+      >
+      <span>Lorem ipsum dolor</span>
+    </div>
+    <div>
+      <img
+        src="https://i.pinimg.com/736x/a1/fa/7b/a1fa7b89c36b25de489a3eb9cd6489f2.jpg"
+        alt="image 3"
+      >
+      <span>Lorem ipsum dolor</span>
+    </div>
+  </div>
+
+  <script
+    defer
+    src="/build/index.js"
+  ></script>
+
 </body>
 </html>
