add wrapper container

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div>
+  <div class="wrapper">
     <div>
       <img
         src="https://media-exp1.licdn.com/dms/image/C4D1BAQG-0hio-DK1ug/company-background_10000/0/1519796866306?e=2147483647&v=beta&t=A0JgPhrxa-ruGv9bVMbj3_El1Opt1jj7hyUskbHS5zc"
