Add New Design System: Reset, Typography, Colors, Hn, P, Root, Buttons, grid system

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootcamp Frontend</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frontend Class</title>
+
+  </head>
+  <body>
+
+    <div class="container">
+      <h1>HOLA</h1>
+      <h2>HOLA</h2>
+      <h3>HOLA</h3>
+      <h4>HOLA</h4>
+      <h5>HOLA</h5>
+      <h6>HOLA</h6>
+    </div>
+
+    <div class="container grid list-cards">
+      <div class="card">HOLE</div>
+      <div class="card">HOLE</div>
+      <div class="card">HOLE</div>
+      <div class="card">HOLE</div>
+    </div>
+
+    <div class="container grid plans">
+      <button class="btn-1">HOLE</button>
+      <button class="btn-2">HOLE</button>
+    </div>
+
+    <script
+      defer
+      src="/build/index.js"
+    ></script>
+    
+  </body>
 </html>
