--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,66 @@
       <div class="card">HOLE</div>
     </div>
 
-    <div class="container grid plans">
-      <button class="btn-1">HOLE</button>
-      <button class="btn-2">HOLE</button>
+    <div class="container flex plans">
+      <div>
+        <h3 class="h2">
+          Plan 1
+        </h3>
+        <button class="btn-1">
+          Active my plan
+        </button>
+      </div>
+      <div>
+        <h3 class="h2">
+          Plan 2 ⭐
+        </h3>
+        <button class="btn-2">
+          Active my plan
+        </button>
+      </div>
+      <div>
+        <h3 class="h2">
+          Plan 2
+        </h3>
+        <button class="btn-1">
+          Active my plan
+        </button>
+      </div>
+    </div>
+
+    <div class="container">
+      <h2 class="h3">
+        My forms elements
+      </h2>
+      <form class="grid form" action="/cart">
+        <input
+          class="inp"
+          type="text"
+          name="name"
+          placeholder="Name"
+          required
+        />
+
+        <input
+          class="inp"
+          type="text"
+          name="lastName"
+          placeholder="Last Name"
+          required
+        />
+
+        <input
+          class="inp col-100"
+          type="email"
+          name="email"
+          placeholder="E-mail"
+          required
+        />
+        
+        <button class="btn-1 col-100">
+          Submit
+        </button>
+      </form>
     </div>
 
     <script
