handle number, name, date card

--- a/public/payment.html
+++ b/public/payment.html
@@ -57,6 +57,7 @@
       >
         <input
           type="number"
+          maxlength="16"
           name="number-card"
           id="card-number-i"
           pattern="[0-9]*"
